--- a/serverless.yml
+++ b/serverless.yml
@@ -20,6 +20,7 @@ service: api-serverless
 provider:
   name: aws
   runtime: nodejs6.10
+  region: eu-west-1
 
 # you can overwrite defaults here
 #  stage: dev
