--- a/serverless.yml
+++ b/serverless.yml
@@ -21,6 +21,7 @@ provider:
   name: aws
   runtime: nodejs6.10
   region: eu-west-1
+  profile: hotvenue
 
 # you can overwrite defaults here
 #  stage: dev
@@ -58,6 +59,8 @@ provider:
 functions:
   hello:
     handler: handler.hello
+    events:
+      - http: get hello
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
