Integrated babel support

--- a/serverless.yml
+++ b/serverless.yml
@@ -13,6 +13,9 @@
 
 service: api-serverless
 
+plugins:
+  - serverless-webpack
+
 # You can pin your service to only deploy with a specific Serverless version
 # Check out our docs for more details
 # frameworkVersion: "=X.X.X"
