--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
     "serverless-webpack": "^2.2.0",
     "webpack": "^3.5.5"
   },
