--- a/serverless.yml
+++ b/serverless.yml
@@ -60,10 +60,14 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  test:
+    handler: handler.test
     events:
-      - http: get hello
+      - http: get test
+  api:
+    handler: handler.api
+    events:
+      - http: get api
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
