--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,7 @@
 service: api-serverless
 
+frameworkVersion: ">=1.5.0 <2.0.0"
+
 plugins:
   - serverless-webpack
 
@@ -8,6 +10,17 @@ provider:
   runtime: nodejs6.10
   region: eu-west-1
   profile: hotvenue
+  iamRoleStatements: # permissions for all of your functions can be set here
+    - Effect: Allow
+      Action: # Gives permission to DynamoDB tables in a specific region
+        - dynamodb:DescribeTable
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource: "arn:aws:dynamodb:eu-west-1:*:*"
 
 functions:
   test:
@@ -18,3 +31,19 @@ functions:
     handler: handler.api
     events:
       - http: get api
+
+resources:
+  Resources:
+    locationsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: locationsTable
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
